--- a/platform-admin/pom.xml
+++ b/platform-admin/pom.xml
@@ -26,6 +26,12 @@
             <groupId>com.kucaroom</groupId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <artifactId>enum</artifactId>
+            <groupId>com.kucaroom</groupId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
