--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <version>3.4.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
         <dependency>
             <groupId>net.sf.json-lib</groupId>
